--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mavros_gym_msgs</name>
+  <name>ros_gym_msgs</name>
   <version>0.0.0</version>
-  <description>The mavros_gym_msgs package</description>
+  <description>The ros_gym_msgs package</description>
   <maintainer email="saifullah3396@gmail.com">Saifullah</maintainer>
   <license>BSD</license>
   <author email="saifullah3396@gmail.com">Saifullah</author> -->
