--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,15 +48,20 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  RLExperimentInfo.msg
+  EpisodeStep.msg
+  DiscreteSpace.msg
+  BoxSpaceFloat32.msg
+  CartPoleTaskState.msg
+  CartPoleTaskAction.msg
 )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  EnvInit.srv
+  EnvStep.srv
+  EnvReset.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
